syntax = "proto3";
package auth;
option go_package = "example.com/grpcJwtAuth;grpcJwtAuth";


message EmptyRequestResponse {

}


message LogoutRequest {}
message LogoutResponse {}

message InfoResponse {
  string id = 1;
  string email = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
}


// Empty, because refresh token is send through metadata not body
message RefreshRequest {}
message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}


service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
  rpc SignIn(SignInRequest) returns (SignInResponse) {};
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {};
  rpc Logout(LogoutRequest) returns (LogoutResponse) {};
  rpc Info(EmptyRequestResponse) returns (InfoResponse) {};
}